# pizdos-scanner

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.release  README.md  build.sh  compose.yaml  config.toml  docker-entrypoint.sh  install.sh
.github/workflows/: release-docker-image.yml
docs/internal/: scan-logic.md  tui-logic.md
scripts/: update-hoster-subnets.py
src/: geoip.rs  icmp.rs  init.rs  ipinfo.rs  lib.rs  main.rs  scan_state.rs  scanner.rs  tcp_ping.rs  tui.rs  utils.rs  xray_geoip.rs
src/commands/: finalize.rs  icmp_fast.rs  mod.rs  net.rs  scan.rs  tcp_scan_file.rs
src/ipinfo_providers/: ip_api.rs  ip_sb.rs  ipapi_co.rs  ipinfo.rs  ipwho_is.rs  mod.rs
src/scanner/: parallel.rs  scan_conditions.rs  scan_loop.rs
subnets/: all-known-hosters.txt  regru.txt  selectel.txt  timeweb.txt  vk-cloud.txt  yandex-cloud.txt
